add heroku settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
-spring.data.mongodb.uri=mongodb+srv://builders-db:builders-db@builders.1xlq2.mongodb.net/builders?retryWrites=true&w=majority
+spring.data.mongodb.uri=${mongoUri:mongodb+srv://builders-db:builders-db@builders.1xlq2.mongodb.net/builders?retryWrites=true&w=majority}
 
 #spring.data.mongodb.host=mongo_db
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=builders
+
+java.runtime.version=11
+server.port=${PORT:8080}
